Add `lein profile` alias w/ extra JVM flags :racing_car: